[gd_scene load_steps=15 format=3 uid="uid://xuaexscyabkr"]

[ext_resource type="Script" uid="uid://dqhwuktq4if3c" path="res://game/lobby/lobby_ui.gd" id="1_c5e1p"]
[ext_resource type="Texture2D" uid="uid://bbohnp1m8xf17" path="res://ASSETS/UI/alice button.png" id="2_oecd8"]
[ext_resource type="PackedScene" uid="uid://dh3jbvgr066gq" path="res://game/prefabs/title.tscn" id="2_s3qpd"]
[ext_resource type="Texture2D" uid="uid://bujs21f11yisb" path="res://ASSETS/UI/bob button.png" id="3_s3qpd"]
[ext_resource type="PackedScene" uid="uid://bpuvhtgrkp2mo" path="res://game/prefabs/boil/boil_outline.tscn" id="5_ksoky"]
[ext_resource type="Shader" uid="uid://ci4jcbprng6kv" path="res://game/prefabs/boil/outline.gdshader" id="6_icgbd"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k4ihf"]
shader = ExtResource("6_icgbd")
shader_parameter/node_size = Vector2(260, 214)
shader_parameter/outline_color = Color(0.968627, 0.596078, 0.141176, 1)
shader_parameter/bg_color = Color(0.471914, 0.273748, 0.0131317, 1)
shader_parameter/thickness = 12.0
shader_parameter/radius = 10.0
shader_parameter/pixelSize = 5.0
shader_parameter/softness = 0.5
shader_parameter/fps = 6.0
shader_parameter/frameCount = 4.0
shader_parameter/speed = 50.0
shader_parameter/amplitude = 2.5
shader_parameter/freq = 0.05
shader_parameter/noiseStrength = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_36d3c"]
atlas = ExtResource("2_oecd8")
region = Rect2(0, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksoky"]
atlas = ExtResource("2_oecd8")
region = Rect2(0, 32, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_icgbd"]
atlas = ExtResource("2_oecd8")
region = Rect2(0, 64, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4ihf"]
atlas = ExtResource("3_s3qpd")
region = Rect2(0, 0, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nne7v"]
atlas = ExtResource("3_s3qpd")
region = Rect2(0, 32, 96, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7q50m"]
atlas = ExtResource("3_s3qpd")
region = Rect2(0, 64, 96, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_0yah4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_36d3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksoky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icgbd")
}],
"loop": true,
"name": &"alice",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4ihf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nne7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7q50m")
}],
"loop": true,
"name": &"bob",
"speed": 5.0
}]

[node name="LobbyUI" type="CanvasLayer"]
script = ExtResource("1_c5e1p")

[node name="DebugLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 29.0
offset_top = 245.0
offset_right = 408.0
offset_bottom = 327.0
text = "<DebugLabel>
"

[node name="DebugClientListLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 29.0
offset_top = 332.0
offset_right = 191.0
offset_bottom = 355.0
text = "No clients connected"

[node name="Title" parent="." instance=ExtResource("2_s3qpd")]

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 379.0
offset_top = 248.0
offset_right = 639.0
offset_bottom = 462.0

[node name="BoilOutline" parent="Menu" instance=ExtResource("5_ksoky")]
material = SubResource("ShaderMaterial_k4ihf")
layout_mode = 0
offset_left = 0.0
offset_top = 0.0
offset_right = 260.0
offset_bottom = 214.0
parentSize = true

[node name="AliceStart" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 57.0
offset_top = 72.0
offset_right = 201.0
offset_bottom = 120.0
flat = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Menu/AliceStart"]
position = Vector2(72, 24)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_0yah4")
animation = &"alice"
autoplay = "alice"
frame_progress = 0.406069

[node name="BobStart" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 58.0
offset_top = 134.0
offset_right = 201.0
offset_bottom = 182.0
flat = true

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="Menu/BobStart"]
position = Vector2(71.5, 24)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_0yah4")
animation = &"bob"
autoplay = "bob"
frame_progress = 0.643726

[node name="Code" type="Label" parent="Menu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -34.0
offset_top = 27.0
offset_right = 34.0
offset_bottom = 66.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 28
text = "Code"

[connection signal="pressed" from="Menu/AliceStart" to="." method="_on_alice_start_pressed"]
[connection signal="pressed" from="Menu/BobStart" to="." method="_on_bob_start_pressed"]
